several css fixes. Quote marks, left buttons spacing

--- a/app/stylesheets/partials/_book_page.sass
+++ b/app/stylesheets/partials/_book_page.sass
@@ -27,10 +27,11 @@
       #rating-stars
         padding-left: 34px
     #read-online-btn
-      margin: 15px 0px
+      margin-top: 15px
     #download-as
+      margin-top: 15px
       .text
-        margin-bottom: 10px
+        margin-bottom: 15px
       .download-button
         margin-bottom: 6px
 
@@ -73,6 +74,7 @@
     
 
     #write-review
+      text-align: right
 
     #greeting
       .profile-pic
