--- a/app/stylesheets/partials/_global.sass
+++ b/app/stylesheets/partials/_global.sass
@@ -17,7 +17,8 @@ body
   a:focus
     outline: none
     -moz-outline: 0 none  
-
+  a.btn.primary
+    color: white !important
   
 /* -----------------------------------*/
 /* ---------->>> MIXINS <<<-----------*/
